# torero

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  package.xml
Torero/: CMakeLists.txt  README.md  SECTIONS.md
Torero/algebraica/: Algebraica.h  mat4.h  mat4.js  vec2.h  vec3.h  vec4.h
Torero/headers/: console.h  definitions.h  three_dimensional_model_loader.h  types.h
Torero/includes/: buffer.h  camera.h  console.h  definitions.h  point_cloud.h  point_cloud_manager.h  shader.h  skybox.h  three_dimensional_model_loader.h  types.h
Torero/libs/GLAD/include/glad/: glad.h
Torero/libs/GLAD/src/: glad.c
Torero/libs/GLAD_old/: CMakeLists.txt
Torero/libs/GLAD_old/include/glad/: glad.h
Torero/libs/GLAD_old/src/: glad.c
Torero/libs/algebraica/: Algebraica.h  mat3.h  mat4.h  vec2.h  vec3.h  vec4.h
Torero/libs/extras/sources/: kittiLaserData.cpp
Torero/libs/kitti/includes/: kitti_point_cloud_reader.h
Torero/libs/kitti/src/: kitti_point_cloud_reader.cpp
Torero/resources/: images.qrc  models3D
Torero/resources/models3D/shaders/: cubemap.vert  irradiance_convolution.frag  point_cloud.frag  point_cloud.vert  skybox.frag  skybox.vert
Torero/resources/shaders/: PBR.frag  PBR.vert  skybox.frag  skybox.vert
Torero/sources/: console.cpp  gui.cpp  main.cpp  three_dimensional_model_loader.cpp
Torero/src/: buffer.cpp  camera.cpp  console.cpp  main.cpp  point_cloud.cpp  point_cloud_manager.cpp  shader.cpp  skybox.cpp  three_dimensional_model_loader.cpp
binary_files_torero/: README.md
include/: buffer.h  camera.h  core.h  cubemap.h  definitions.h  ground.h  ground_manager.h  line_grid.h  model_manager.h  object_manager.h  objects.h  point_cloud.h  point_cloud_manager.h  shader.h  skybox.h  texture.h  three_dimensional_model_loader.h  trajectory.h  trajectory_manager.h  types.h  vehicle_manager.h
include/torero/: buffer.h  camera.h  camera_element.h  camera_manager.h  constant_expressions.h  core.h  cubemap.h  definitions.h  enumerators.h  font_loader.h  frame_buffer.h  ground.h  ground_manager.h  gui_compass.h  gui_loader.h  gui_manager.h  gui_menu.h  gui_options.h  gui_speedometer.h  gui_title_bar.h  line_grid.h  model_manager.h  multithread_manager.h  object_manager.h  objects.h  point_cloud.h  point_cloud_manager.h  render_buffer.h  screen_conversor.h  shader.h  skybox.h  text_manager.h  text_object (copy).h  text_object.h  texture.h  three_dimensional_model_loader.h  trajectories.h  trajectory.h  trajectory_manager.h  type_definitions.h  (+3 more)
include/torero/camera/: camera.h  manager.h  view.h
include/torero/covariance/: covariance.h  manager.h
include/torero/definition/: constant_expressions.h  enumerators.h  types.h
include/torero/event/: handler.h
include/torero/file/: manager.h
include/torero/gl/: buffer.h  frame_buffer.h  render_buffer.h  render_processor.h  shader.h  texture.h  uniform_buffer.h
include/torero/ground/: ground.h  line_grid.h  manager.h
include/torero/gui/: compass.h  controller.h  cursors.h  loader.h  manager.h  menu.h  options.h  screen_conversor.h  speedometer.h  title_bar.h
include/torero/image/: manager.h
include/torero/model/: environment.h  loader.h  manager.h  skybox.h
include/torero/object/: manager.h  objects.h
include/torero/point_cloud/: cloud.h  manager.h
include/torero/ros/: bag_controller.h
include/torero/terminal/: printer.h
include/torero/text/: font_loader.h  manager.h  text_object.h
include/torero/thread/: manager.h
include/torero/trajectory/: manager.h  trajectories.h
include/torero/vehicle/: manager.h
includes/: buffer.h  camera.h  core.h  definitions.h  ground.h  ground_manager.h  gui.h  model_manager.h  object_manager.h  objects.h  point_cloud.h  point_cloud_manager.h  shader.h  skybox.h  texture.h  three_dimensional_model_loader.h  trajectory.h  trajectory_manager.h  types.h
lib/GLAD/src/: glad.c
lib/algebraica/: Algebraica.h  CMakeLists.txt  mat3.h  mat4.h  vec2.h  vec3.h  vec4.h
lib/algebraica/include/algebraica/: algebraica.h  linear.h  mat2.h  mat3.h  mat4.h  quaternion.h  vec2.h  vec3.h  vec4.h
lib/algebraica/src/: linear.cpp  mat2.cpp  mat3.cpp  mat4.cpp  quaternion.cpp  vec2.cpp  vec3.cpp  vec4.cpp
libs/algebraica/: CMakeLists.txt  linear.h  mat4.h  vec2.h  vec4.h
libs/kitti/includes/: kitti_point_cloud_reader.h
libs/kitti/src/: kitti_point_cloud_reader.cpp
libs/stb/: stb_image.h
resources/fonts/: Iceland_old.fnt  miriam.fnt  rubik.fnt  text_me_one.fnt
resources/shaders/: PBR (another copy).frag  PBR (another copy).vert  PBR (copy).frag  PBR (copy).vert  PBR.frag  PBR.vert  PBR_2.frag  PBR_2.vert  PBR_complex.vert  PBR_old.frag  PBR_old.vert  brdf (copy).frag  brdf.frag  brdf.vert  covariance.frag  covariance.vert  cubemap.vert  cubemap_generator.frag  cubemap_generator.vert  ground.frag  ground.geom  ground.vert  gui_2D.frag  gui_2D.vert  gui_PBR.frag  gui_PBR.vert  gui_mouse.frag  gui_mouse.vert  gui_text.frag  gui_text.geom  gui_text.vert  irradiance.frag  lines.frag  lines.vert  objects.frag  objects.vert  objects_old.frag  objects_old.geom  objects_old.vert  point_cloud.frag  (+10 more)
src/: Algebraica.cpp  camera.cpp  camera_element.cpp  camera_manager.cpp  core.cpp  cubemap.cpp  font_loader.cpp  ground.cpp  ground_manager.cpp  gui.cpp  gui_compass.cpp  gui_loader.cpp  gui_manager.cpp  gui_menu.cpp  gui_options.cpp  gui_speedometer.cpp  gui_title_bar.cpp  line_grid.cpp  model_manager.cpp  multithread_manager.cpp  object_manager.cpp  objects.cpp  point_cloud.cpp  point_cloud_manager.cpp  screen_conversor.cpp  skybox.cpp  text_manager.cpp  text_object.cpp  three_dimensional_model_loader.cpp  trajectories.cpp  trajectory.cpp  trajectory_manager.cpp  utilities.cpp  vehicle_manager.cpp
src/torero/: core.cpp
src/torero/camera/: camera.cpp  manager.cpp  view.cpp
src/torero/covariance/: covariance.cpp  manager.cpp
src/torero/event/: handler.cpp
src/torero/file/: manager.cpp
src/torero/gl/: buffer.cpp  frame_buffer.cpp  render_buffer.cpp  render_processor.cpp  (+1 more)
wiki/: 1-Installation-guide.md  2-Coordinate-systems.md  3-Core.md  Home.md  _Sidebar.md
(+33 files in other folders)
