<?xml version="1.0"?>
<package>
  <name>torero</name>
  <version>1.3.1</version>
  <description>torero</description>


  <maintainer email="f.ramirez@pem.rwth-aachen.de">framirez</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>


  <export>
  </export>
</package>
